# fastapi_skeleton

./: .env.development  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: alembic.ini  main.py  pyproject.toml
app/api/: deps.py
app/api/v1/: api.py
app/app/api/v1/: api.py
app/app/api/v1/endpoints.py/: health.py
app/app/core/: config.py
app/app/db/: init_db.py  session.py
app/core/: config.py  logging.py
app/db/: session.py
app/tests/: test_health.py
scripts/: format.sh  lint.sh  start.sh
