[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Sameh khasawneh <>"]

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.6"
fastapi = "^0.115.0"
celery = "^5.4.0"
requests = "^2.32.3"
sqlalchemy = "^2.0.35"
gunicorn = "^23.0.0"
pydantic = "^2.9.2"
alembic = "^1.13.3"
# psycopg2-binary = "^2.9.9"
psycopg = {extras = ["binary"], version = "^3.1.13"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "4.0.1"
tenacity = "^9.0.0"
# python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pyjwt = "^2.8.0"
pydantic-settings = "^2.5.2"
email-validator = "^2.2.0"
emails = "^0.6"

[tool.poetry.dev-dependencies]
mypy = "^1.11.2"
black = "^24.8.0"
isort = "^5.13.2"
autoflake = "^2.3.1"
flake8 = "^7.1.1"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry>=1.6.1"]
build-backend = "poetry.masonry.api"